--- a/404.html
+++ b/404.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=index.html">
-  <title>Wplace Pixel Timer</title>
+  <meta http-equiv="refresh" content="0; url=https://wplacepixeltimer.com">
 </head>
-<body>
-</body>
 </html>
