--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="banner">
+    dadada
+  </div>
   <div class="container">
     <a href="https://wplace.live" target="_blank" class="top-block">
       <img src="wplacelogo.png" alt="Logo" class="pixel-image">
@@ -85,5 +88,6 @@ function calculer() {
 </script>
 </body>
 </html>
+
 
 
