--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <a href="https://wplace.live" target="_blank" class="top-block">
-      <img src="wplacelogo.png" alt="Logo" class="pixel-image">
-      <div class="top-text">
-        <p>wplace</p>
+  <main class="main">
+    <div class="container-wrapper">
+      <div class="container">
+        <a href="https://wplace.live" target="_blank" class="top-block">
+          <img src="wplacelogo.png" alt="Logo" class="pixel-image">
+          <div class="top-text">
+            <p>wplace</p>
+          </div>
+        </a>
+
+        <div class="main-text">
+          <h1>Pixel Timer</h1>
+          <p>Check how long it takes to fully reload your pixels so you can place them before reaching the limit.</p>
+        </div>
+
+        <input type="number" id="currentPixels" placeholder="Enter your current amount of paint charges" min="0">
+        <input type="number" id="pixels" placeholder="Enter your maximum paint charges capacity" min="1">
+        <button onclick="calculer()" disabled>Calculate</button>
+        <div id="result"></div>
       </div>
-    </a>
-
-    <div class="main-text">
-      <h1>Pixel Timer</h1>
-      <p>Check how long it takes to fully reload your pixels so you can place them before reaching the limit.</p>
     </div>
+  </main>
 
-    <input type="number" id="currentPixels" placeholder="Enter your current amount of paint charges" min="0">
-    <input type="number" id="pixels" placeholder="Enter your maximum paint charges capacity" min="1">
-    <button onclick="calculer()" disabled>Calculate</button>
-    <div id="result"></div>
-
-    <footer>
-      &copy; 2025 vxncz3. All rights reserved.<br>Not affiliated with Wplace.
-    </footer>
-  </div>
+  <footer class="site-footer">
+    &copy; 2025 vxncz3. All rights reserved. | Not affiliated with Wplace.
+  </footer>
 
 <script>
 const pixelsInput = document.getElementById("pixels");
@@ -85,7 +89,3 @@ function calculer() {
 </script>
 </body>
 </html>
-
-
-
-
