--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="banner">
+    We are aware that the website may be unresponsive for mobile users. We are working on that.
+  </div>
   <main class="main">
     <div class="container-wrapper">
       <div class="container">
@@ -89,3 +92,4 @@ function calculer() {
 </script>
 </body>
 </html>
+
